# scanning-doppler-interferometer

./: .gitignore  .travis.yml  PlotWinds.py  README.md  README.rst  sdi_ascii_reader.pro  setup.cfg  setup.py
data/: PKR_2017_061_date_03_02_sky_5577_nz0115.txt
scanning_doppler_interferometer/: __init__.py  base.py  plots.py
tests/: test_all.py
