[metadata]
name = scanning-doppler-interferometer
version = 0.7.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Load and plot scanning Doppler interferometer data.
url = https://github.com/space-physics/scanning-doppler-interferometer
keywords =
  winds
  interferometry
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  pandas

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
io =
  scipy
plots =
  matplotlib
